# nve

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  build.rs
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
cuda/: bench_main.cu  nve_kernels.cu
docs/: architecture.md  benchmarks.md  paper_outline.md  quantization.md  streaming-profiler.md  usage.md
evidence/: README.md
evidence/2026-04-12/: bench_competitive.py  run_experiments.sh  visualize.py
evidence/2026-04-12/experiments/: hot_only_data.json  llama1b_abc_full.json  llama1b_abc_modal_clean.json  llama1b_layer_profile.json  llama1b_layers_10.json  llama1b_layers_12.json  llama1b_layers_14.json  llama1b_layers_16.json  llama1b_layers_2.json  llama1b_layers_4.json  llama1b_layers_6.json  llama1b_layers_8.json  llama1b_scorer_comparison.json  qwen_abc_full.json  qwen_layer_profile.json  run_log.txt
evidence/2026-04-13/: modal_3b_8b.py  modal_experiments.py  modal_rigorous.py  raw_outputs.md
evidence/2026-04-13/experiments/: gpt2_gpu.json  llama1b_abc_clean.json  llama1b_bpw_0_5.json  llama1b_bpw_1_0.json  llama1b_bpw_1_5.json  llama1b_bpw_2_0.json  llama1b_bpw_3_0.json  llama1b_bpw_4_0.json  llama3b_abc_clean.json  llama8b_abc_clean.truncated.json  llama_1b_gpu.json  llama_3b_gpu.json  llama_8b_gpu.json  qwen_0_5b_gpu.json  qwen_1_5b_gpu.json  qwen_3b_gpu.json  qwen_7b_gpu.json  qwen_abc_clean.json  rigorous_comparison.json
evidence/2026-04-14/: modal_fused_kernels_test.py  modal_gpu_benchmark.py  modal_graph_bench.py  modal_importance_w4a8.py  modal_microbench.py  modal_real_model_w4a8.py  modal_smoke_test.py  modal_w4a8_bench.py
evidence/2026-04-14/experiments/: gpu_benchmark.json  importance_w4a8.json  real_model_w4a8.json
evidence/2026-04-15/: modal_threshold_ablation.py
evidence/2026-04-15/experiments/: threshold_ablation.json  wikitext_hellaswag.json
evidence/2026-04-16/: modal_awq_gptq_comparison.py  modal_deepspeed_bench.py  modal_vllm_bench.py  modal_wikitext_hellaswag.py
evidence/2026-04-16/experiments/: deepspeed_hf_bench.json
evidence/2026-04-16/figures_paper/: results_summary.md  tables.tex
evidence/2026-04-17/: modal_pipeline_demo.py
evidence/2026-04-17/experiments/: pipeline_demo_results.json
evidence/2026-04-18/: visualize_paper.py
examples/: basic_profiling.py  test_real_model.py  test_tiered_serving.py
paper/: build.sh  mcap.tex  mcap_style.sty  neurips_2025.sty
python/: pyproject.toml
python/nve/: __init__.py  benchmark.py  device.py  engine.py  hub.py  kv_cache.py  manifest.py  pager.py  profiler.py  quantization.py  rust_backend.py  serving.py  streaming_profiler.py  streaming_server.py
python/nve.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
python/nve/serve/: __init__.py  __main__.py  batch_scheduler.py  config.py  handlers.py  hardware.py  logging_config.py  metrics.py  model_router.py  model_store.py  quantization.py  rate_limiter.py  server.py  streaming.py  worker_pool.py
python/tests/: conftest.py  test_batch_scheduler.py  test_config.py  test_metrics.py  test_server.py
reports/: benchmark_w4a8.md  scorer_comparison.md  task_accuracy.md
reports/legacy/: abc_e2e_report.md  gpu_benchmark_t4.md  hot_only_benchmark.md
src/: abc_benchmark.rs  arch.rs  attention.rs  benchmark.rs  cluster.rs  config.rs  cuda_kernels.rs  decode_graph.rs  device.rs  generic_model.rs  gpu_layer.rs  hub.rs  importance_cache.rs  lib.rs  main.rs  model.rs  ops.rs  paged_model.rs  pager.rs  profiler.rs  quantize.rs  safetensors.rs  tensor.rs  tier.rs  tokenizer.rs  weight_map.rs
src/cli/: banner.rs  chat.rs  config.rs  display.rs  mod.rs
tests/: abc_results_1b_bc.json  abc_results_1b_v2.json  abc_results_3b_v1.json  abc_results_gpt2.json  abc_results_gpt2_v2.json  abc_results_gpt2_v3.json  abc_test.sh  bench_competitive.py  bench_deepspeed.py  compare_1b_3b.sh  e2e.rs  run_compare.sh
tests/integration/: benchmark_hot_only.py  test_colab_notebook.py  test_e2e.py  test_e2e_gpt2_full.py  test_hot_only_e2e.py  test_mock_cuda.py
