[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nve"
version = "0.2.0"
description = "Neural Virtualization Engine — Monte Carlo guided virtual weight paging for running large models on small devices"
readme = "../README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [{ name = "NVE Contributors" }]
keywords = ["llm", "inference", "quantization", "paging", "monte-carlo"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.24",
    "torch>=2.0",
    "psutil>=5.9",
    "aiohttp>=3.9",
]

[project.urls]
Homepage = "https://github.com/nve-project/nve"
Repository = "https://github.com/nve-project/nve"
Documentation = "https://github.com/nve-project/nve/tree/main/docs"
Issues = "https://github.com/nve-project/nve/issues"
Changelog = "https://github.com/nve-project/nve/blob/main/CHANGELOG.md"

[project.scripts]
nve-serve = "nve.serve.__main__:main"

[project.optional-dependencies]
dev = ["pytest>=7", "pytest-asyncio>=0.23", "aiohttp-pytest>=0.1"]
full = [
    "transformers>=4.30",
    "accelerate>=0.20",
    "huggingface-hub>=0.16",
]

[tool.setuptools.packages.find]
where = ["."]
